--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- css styles -->
   <link rel="stylesheet" href="styles.css">
   <!-- favicon -->
-  <link rel="icon" href="image/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <!-- bootstrap scripts -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
       <!-- navbar -->
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">
-          <img src="image/cc.png" width="50" height="50" class="d-inline-block align-top" alt="">
+          <img src="cc.png" width="50" height="50" class="d-inline-block align-top" alt="">
           Home Bakers</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
           <button type="button" class="btn btn-outline-dark hello" href="#cta">Order Now </button>
       </div>
       <div class="col-lg-6">
-          <img src="image/berb.png" alt="alt">
+          <img src="berb.png" alt="alt">
       </div>
     </div>
 
